# Zredict

./: README.md
.devcontainer/: devcontainer.json
zpredict/: Cargo.toml  README.md  schema.sql
zpredict/src/: error.rs  lib.rs  main.rs  models.rs  parimutuel.rs  store.rs
zpredict/static/: index.html
zpredict/tests/: lifecycle.rs
zredict/: .gitignore  Cargo.toml  README.md  schema.sql
zredict/.devcontainer/: devcontainer.json
zredict/src/: error.rs  lib.rs  main.rs  models.rs  store.rs
zredict/static/: index.html
zredict/tests/: lifecycle.rs
